--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+0.3.5
+- Add max_depth option to crawler configuration for limiting the crawl to a
+  specific depth
+- add support for http proxies including basic authentication
+- remove rubyfoul_soup support
+
+0.3.4
+
 0.3.2
 - make RDig compatible with Ferret 0.10.x
 - won't work any more with Ferret 0.9.x and before
